# skill-stake-backend

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: asgi.py  authentication.py  models.py  settings.py  urls.py  wsgi.py
rooms/: models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py
