[tool.poetry]
name = "skill-stake-backend"
version = "0.1.0"
description = ""
authors = ["Yaswanth Sai Vendra <yaswanthsaivendra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"
social-auth-app-django = "^5.4.2"
dj-rest-auth = "^7.0.1"
django-allauth = "^65.3.1"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
